# TheBaby

./: .env  .gitignore  FastoG_exp.ipynb  README.md  agentic_memory_doc.md  full_graph_graph.html  generate_from_file.py.save  generate_graph.py  generation_prompt.py  gitignore  load_data.py  memory_preprocessing.py  ontology.json  query_graph.py  requirements.txt  transcript2.txt.save  transcript3.txt
agentic-system/: requirements.txt
agentic-system/assistant_crew/: README.md  pyproject.toml  scraped_content_20250305_125330.md  scraped_content_20250305_134528.md  scraped_content_20250305_135359.md  scraped_content_20250305_220550.md  scraped_content_20250305_222129.md  scraped_content_20250306_125007.md  scraped_content_20250306_125042.md
agentic-system/assistant_crew/src/assistant_crew/: crew.py  main.py  run_every_five_minutes.py  running_guide.md
agentic-system/assistant_crew/src/assistant_crew/config/: agents.yaml  calendar_agents.yaml  calendar_tasks.yaml  email_graph_agents.yaml  email_graph_tasks.yaml  qa_agents.yaml  qa_tasks.yaml  web_search_agents.yaml  web_search_tasks.yaml
agentic-system/assistant_crew/src/assistant_crew/tools/: credentials.json  custom_tool.py  get_token.py  test_tools.py  token.pickle
agentic-system/assistant_crew/src/assistant_crew/tools/GraphRAG/graphengine/: generate_from_file.py  generate_graph.py  load_data.py  memory_preprocessing.py  query_graph.py  visualize_graph.py
agentic-system/assistant_crew/src/notebooks/: Collaborative_Agent_Summarization_CrewAI_Colab_Marktechpost.ipynb  CrewAI_Example.ipynb
benchy/: nohup.out  (+1 more)
(+24 files in other folders)
