[project]
name = "assistant_crew"
version = "0.1.0"
description = "assistant_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
assistant_crew = "assistant_crew.main:run"
run_crew = "assistant_crew.main:run"
train = "assistant_crew.main:train"
replay = "assistant_crew.main:replay"
test = "assistant_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
